@@ -62,6 +62,8 @@ Version 1.7.0-svn:
      plus some other unwanted changes there (bug #13243)
    * Making the game return to the add-on install dialog just before
      installing one, and with its entry selected
+   * Implemented FR #13321: added "unit advances=N" command to debug console
+     to immediately level-up selected unit N times
  * WML Engine:
    * Added [show_objectives] tag (part of bug #13042)
    * Made moveto events set $x2,$y2 to the source hex. (bug #13140)
